--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ body {
 
 .logo {
   height: 3.25rem;
-  margin-left: 3rem; }
+  margin-left: 2rem; }
 
 .search {
   flex: 0 0 40%;
@@ -98,7 +98,7 @@ body {
     width: 90%;
     transition: all .2s;
     margin-right: -3.25rem; }
-    .search__input:focus {
+    .search__input:focus, .search__input:hover {
       outline: none;
       width: 100%;
       background-color: var(--color-grey-light-3); }
@@ -120,10 +120,39 @@ body {
     fill: var(--color-grey-dark-3); }
 
 .user-nav {
-  background-color: greenyellow; }
+  display: flex;
+  align-items: center;
+  align-self: stretch; }
+  .user-nav > * {
+    padding: 0 2rem;
+    cursor: pointer;
+    height: 100%;
+    display: flex;
+    align-items: center; }
+  .user-nav > *:hover {
+    background-color: var(--color-grey-light-2); }
+  .user-nav__icon-box {
+    height: 2.25;
+    width: 2.25;
+    fill: var(--color-grey-dark-2);
+    position: relative; }
   .user-nav__icon {
     height: 2.25rem;
     width: 2.25rem; }
+  .user-nav__notification {
+    font-size: .8rem;
+    height: 1.75rem;
+    width: 1.75rem;
+    border-radius: 50%;
+    background-color: var(--color-primary);
+    color: #fff;
+    position: absolute;
+    top: 1.5rem;
+    right: 1.1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
   .user-nav__user-photo {
     height: 3.75rem;
-    border-radius: 50%; }
+    border-radius: 50%;
+    margin-right: 1rem; }
