--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -2,7 +2,7 @@
 //LOGO
 .logo {
   height: 3.25rem;
-  margin-left: 3rem;
+  margin-left: 2rem;
 }
 
 /////////////////////////////////////////////
@@ -24,7 +24,7 @@
     transition: all .2s;
     margin-right: -3.25rem;
 
-    &:focus {
+    &:focus, &:hover {
       outline: none;
       width: 100%;
       background-color: var(--color-grey-light-3);
@@ -63,8 +63,27 @@
 // USER NAVIGATION
 
 .user-nav {
-  background-color: greenyellow;
+  display: flex;
+  align-items: center;
+  align-self: stretch;
+
+  & > * {
+    padding: 0 2rem;
+    cursor: pointer;
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  & > *:hover {
+    background-color: var(--color-grey-light-2);
+  }
+
   &__icon-box {
+    height: 2.25;
+    width: 2.25;
+    fill: var(--color-grey-dark-2);
+    position: relative;
   }
 
   &__icon {
@@ -73,19 +92,24 @@
   }
 
   &__notification {
-
-  }
-
-  &__user {
-
+    font-size: .8rem;
+    height: 1.75rem;
+    width: 1.75rem;
+    border-radius: 50%;
+    background-color: var(--color-primary);
+    color: #fff;
+    position: absolute;
+    top: 1.5rem;
+    right: 1.1rem;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   &__user-photo {
     height: 3.75rem;
     border-radius: 50%;
-  }
-
-  &__user-name {
-
+    margin-right: 1rem;
   }
 }
